syntax = "proto3";

package rstore;

import "github.com/protocolbuffers/protobuf/src/google/protobuf/any.proto";

option go_package = "github.com/brotherlogic/rstore/proto";

message ReadRequest {
  string key = 1;
}
 
message ReadResponse {
  google.protobuf.Any value = 1;
  int64 timestamp = 2;
}

message WriteRequest {
  string key = 1;
  google.protobuf.Any value = 2;
}

message WriteResponse {
  int64 timestamp = 2;
}

message GetKeysRequest {
  string prefix = 1;
  bool all_keys = 3;
  repeated string avoid_suffix = 2;
}

message GetKeysResponse {
  repeated string keys = 1;
}

message DeleteRequest {
  string key = 1;
}

message DeleteResponse {}

message CountRequest {
  string counter = 1;
}

message CountResponse {
  int64 count = 1;
}


service RStoreService {
  rpc Read (ReadRequest) returns (ReadResponse) {};
  rpc Write (WriteRequest) returns (WriteResponse) {};
  rpc GetKeys (GetKeysRequest) returns (GetKeysResponse) {};
  rpc Delete (DeleteRequest) returns (DeleteResponse) {};
  rpc Count(CountRequest) returns (CountResponse) {};
}